fix: fix video poster not showing

--- a/source/sass/blocks-2/video.scss
+++ b/source/sass/blocks-2/video.scss
@@ -1,5 +1,6 @@
 .video {
   position: relative;
+  z-index: 0;
   border-radius: 10px;
   overflow: hidden;
 }
@@ -16,6 +17,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -30,6 +32,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 2;
   box-sizing: border-box;
   width: 100%;
   height: 100%;
